--- a/BacaLexia/Info.plist
+++ b/BacaLexia/Info.plist
@@ -34,9 +34,7 @@
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
 					<key>UISceneStoryboardFile</key>
-
-					<string>PilihV</string>
-
+					<string>Main</string>
 				</dict>
 			</array>
 		</dict>
@@ -46,9 +44,7 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
-
-	<string>PilihV</string>
-
+	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
@@ -62,9 +58,7 @@
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
-
 		<string>UIInterfaceOrientationLandscapeRight</string>
-
 	</array>
 </dict>
 </plist>
